--- a/app/src/main/AndroidManifest.xml
+++ b/app/src/main/AndroidManifest.xml
@@ -27,14 +27,12 @@
                 <category android:name="android.intent.category.LAUNCHER" />
             </intent-filter>
         </activity>
-
         <activity
             android:name=".TestMainActivity"
             android:label="@string/app_name" >
         </activity>
-	
-  <activity
-            android:name=".ManagementActivity" 
+        <activity
+            android:name=".ManagementActivity"
             android:label="@string/title_activity_management" >
         </activity>
         <activity
@@ -53,7 +51,6 @@
             android:name=".HomeActivity"
             android:label="@string/title_activity_home" >
         </activity>
-
         <activity
             android:name=".LiveScoreActivity"
             android:label="@string/title_activity_live_score" >
@@ -62,14 +59,24 @@
         <meta-data
             android:name="com.google.android.gms.version"
             android:value="@integer/google_play_services_version" />
-        <meta-data
-            android:name="com.google.android.maps.v2.API_KEY"
-            android:value="@string/google_maps_key" />
+
+        <service
+            android:name=".MatchService"
+            android:enabled="true"
+            android:exported="true" >
+        </service>
 
         <activity
-            android:name=".MapsActivity"
-            android:label="@string/title_activity_maps" >
+            android:name=".NextMatchActivity"
+            android:label="@string/title_activity_next_match" >
         </activity>
+
+        <service
+            android:name=".GoalService"
+            android:enabled="true"
+            android:exported="true" >
+        </service>
+
     </application>
 
 </manifest>
