--- a/app/build.gradle
+++ b/app/build.gradle
@@ -23,7 +23,8 @@ android {
 dependencies {
     compile fileTree(dir: 'libs', include: ['*.jar'])
     compile files('libs/dedinje.jar')
-    compile 'com.android.support:appcompat-v7:22.2.1'
     compile 'com.google.android.gms:play-services:8.1.0'
-    compile 'com.android.support:design:22.2.1'
+    compile 'com.google.android.gms:play-services-ads:8.1.0'
+    compile 'com.google.android.gms:play-services-identity:8.1.0'
+    compile 'com.google.android.gms:play-services-gcm:8.1.0'
 }
