--- a/app/src/main/AndroidManifest.xml
+++ b/app/src/main/AndroidManifest.xml
@@ -2,15 +2,13 @@
 <manifest xmlns:android="http://schemas.android.com/apk/res/android"
     package="com.logotet.fkdedinjebgd"
     android:versionCode="1"
-    android:versionName="1.0">
+    android:versionName="1.0" >
 
-
-    <permission android:name="com.logotet.fkdedinjebgd.permission.MAPS_RECEIVE"
-        android:protectionLevel="signature"/>
+    <permission
+        android:name="com.logotet.fkdedinjebgd.permission.MAPS_RECEIVE"
+        android:protectionLevel="signature" />
 
     <uses-permission android:name="com.logotet.fkdedinjebgd.permission.MAPS_RECEIVE" />
-
-
     <uses-permission android:name="android.permission.INTERNET" />
     <uses-permission android:name="android.permission.ACCESS_NETWORK_STATE" />
     <uses-permission android:name="android.permission.WRITE_EXTERNAL_STORAGE" />
@@ -22,8 +20,8 @@
     <uses-permission android:name="android.permission.ACCESS_COARSE_LOCATION" />
     <uses-permission android:name="android.permission.ACCESS_FINE_LOCATION" />
 
-
-    <uses-feature android:glEsVersion="0x00020000"
+    <uses-feature
+        android:glEsVersion="0x00020000"
         android:required="true" />
 
     <application
@@ -39,10 +37,6 @@
 
                 <category android:name="android.intent.category.LAUNCHER" />
             </intent-filter>
-        </activity>
-        <activity
-            android:name=".TestMainActivity"
-            android:label="@string/app_name" >
         </activity>
         <activity
             android:name=".ManagementActivity"
@@ -105,6 +99,8 @@
         <activity
             android:name=".MapsActivity"
             android:label="@string/title_activity_maps" >
+        </activity>
+        <activity android:name=".PortretActivity" >
         </activity>
     </application>
 
