--- a/app/src/main/AndroidManifest.xml
+++ b/app/src/main/AndroidManifest.xml
@@ -1,8 +1,6 @@
 <?xml version="1.0" encoding="utf-8"?>
 <manifest xmlns:android="http://schemas.android.com/apk/res/android"
-    package="com.logotet.fkdedinjebgd"
-    android:versionCode="1"
-    android:versionName="1.0" >
+    package="com.logotet.fkdedinjebgd" >
 
     <permission
         android:name="com.logotet.fkdedinjebgd.permission.MAPS_RECEIVE"
@@ -19,6 +17,9 @@
     -->
     <uses-permission android:name="android.permission.ACCESS_COARSE_LOCATION" />
     <uses-permission android:name="android.permission.ACCESS_FINE_LOCATION" />
+
+
+    <uses-permission android:name="android.permission.RECEIVE_BOOT_COMPLETED" />
 
     <uses-feature
         android:glEsVersion="0x00020000"
@@ -90,18 +91,31 @@
              Note that the API key is linked to the encryption key used to sign the APK.
              You need a different API key for each encryption key, including the release key that is used to
              sign the APK for publishing.
-             You can define the keys for the debug and release targets in src/debug/ and src/release/. 
-        -->
-        <meta-data
-            android:name="com.google.android.maps.v2.API_KEY"
-            android:value="@string/google_maps_key" />
+             You can define the keys for the debug and release targets in src/debug/ and src/release/.
 
+             AIzaSyBfirKWqJjScsg6Rcvc9N-e1I2xlWiSQS4
+        -->
         <activity
             android:name=".MapsActivity"
             android:label="@string/title_activity_maps" >
         </activity>
+
         <activity android:name=".PortretActivity" >
         </activity>
+
+        <receiver
+            android:name=".BootReceiver" >
+            <intent-filter>
+                <action android:name="android.intent.action.BOOT_COMPLETED" />
+            </intent-filter>
+        </receiver>
+
+        <meta-data
+            android:name="com.google.android.maps.v2.API_KEY"
+            android:value="@string/google_maps_key" />
+
+
+
     </application>
 
 </manifest>
