--- a/app/src/main/AndroidManifest.xml
+++ b/app/src/main/AndroidManifest.xml
@@ -1,6 +1,6 @@
 <?xml version="1.0" encoding="utf-8"?>
 <manifest xmlns:android="http://schemas.android.com/apk/res/android"
-    package="com.logotet.fkdedinjebgd" >
+    package="com.logotet.fkdedinjebgd">
 
     <permission
         android:name="com.logotet.fkdedinjebgd.permission.MAPS_RECEIVE"
@@ -17,32 +17,31 @@
     -->
     <uses-permission android:name="android.permission.ACCESS_COARSE_LOCATION" />
     <uses-permission android:name="android.permission.ACCESS_FINE_LOCATION" />
-
-
     <uses-permission android:name="android.permission.RECEIVE_BOOT_COMPLETED" />
-    <uses-permission android:name="android.permission.VIBRATE"/>
+    <uses-permission android:name="android.permission.VIBRATE" />
 
     <uses-feature
         android:glEsVersion="0x00020000"
         android:required="true" />
 
-
-    <supports-screens android:resizeable="true"
-    android:smallScreens="false"
-    android:normalScreens="true"
-    android:largeScreens="true"
-    android:xlargeScreens="true"
-    android:anyDensity="true"
-    android:requiresSmallestWidthDp="320" />
+    <supports-screens
+        android:anyDensity="true"
+        android:largeScreens="true"
+        android:normalScreens="true"
+        android:requiresSmallestWidthDp="320"
+        android:resizeable="true"
+        android:smallScreens="false"
+        android:xlargeScreens="true" />
 
     <application
         android:allowBackup="true"
         android:icon="@mipmap/dedinjskostripes"
         android:label="@string/app_name"
-        android:theme="@style/AppTheme" >
+        android:theme="@style/AppTheme">
         <activity
             android:name=".MainActivity"
-            android:label="@string/app_name" >
+            android:label="@string/app_name"
+            android:screenOrientation="portrait">
             <intent-filter>
                 <action android:name="android.intent.action.MAIN" />
 
@@ -51,28 +50,28 @@
         </activity>
         <activity
             android:name=".ManagementActivity"
-            android:label="@string/title_activity_management" >
-        </activity>
+            android:label="@string/title_activity_management"
+            android:screenOrientation="portrait"></activity>
         <activity
             android:name=".SquadActivity"
-            android:label="@string/title_activity_squad" >
-        </activity>
+            android:label="@string/title_activity_squad"
+            android:screenOrientation="portrait"></activity>
         <activity
             android:name=".FixturesActivity"
-            android:label="@string/title_activity_fixtures" >
-        </activity>
+            android:label="@string/title_activity_fixtures"
+            android:screenOrientation="portrait"></activity>
         <activity
             android:name=".StandingsActivity"
-            android:label="@string/title_activity_standings" >
-        </activity>
+            android:label="@string/title_activity_standings"
+            android:screenOrientation="portrait"></activity>
         <activity
             android:name=".HomeActivity"
-            android:label="@string/title_activity_home" >
-        </activity>
+            android:label="@string/title_activity_home"
+            android:screenOrientation="portrait"></activity>
         <activity
             android:name=".LiveScoreActivity"
-            android:label="@string/title_activity_live_score" >
-        </activity>
+            android:label="@string/title_activity_live_score"
+            android:screenOrientation="portrait"></activity>
 
         <meta-data
             android:name="com.google.android.gms.version"
@@ -81,19 +80,22 @@
         <service
             android:name=".MatchService"
             android:enabled="true"
-            android:exported="true" >
-        </service>
+            android:exported="true"></service>
 
         <activity
             android:name=".NextMatchActivity"
-            android:label="@string/title_activity_next_match" >
-        </activity>
+            android:label="@string/title_activity_next_match"
+            android:screenOrientation="portrait"></activity>
+
+        <activity
+            android:name=".NewsActivity"
+            android:label="@string/title_activity_news"
+            android:screenOrientation="portrait"></activity>
 
         <service
             android:name=".GoalService"
             android:enabled="true"
-            android:exported="true" >
-        </service>
+            android:exported="true"></service>
 
         <!--
              The API key for Google Maps-based APIs is defined as a string resource.
@@ -107,14 +109,10 @@
         -->
         <activity
             android:name=".MapsActivity"
-            android:label="@string/title_activity_maps" >
-        </activity>
+            android:label="@string/title_activity_maps"></activity>
+        <activity android:name=".PortretActivity"></activity>
 
-        <activity android:name=".PortretActivity" >
-        </activity>
-
-        <receiver
-            android:name=".BootReceiver" >
+        <receiver android:name=".BootReceiver">
             <intent-filter>
                 <action android:name="android.intent.action.BOOT_COMPLETED" />
             </intent-filter>
